--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1{
 	border: 2px solid #f79f79;
 	border-radius: 20px;
 	background-color: #f79f79;
+
 	 
 }
 
@@ -40,7 +41,7 @@ p#imagelink {
 	border-radius: 20px;
 	box-shadow: inset 0 0 50px #f7d08a;
 	float:left;
-	width:30%;
+	width:280px;
 	vertical-align: top;
 
 }
@@ -56,7 +57,7 @@ p#imagelink {
 	border-radius: 20px;
 	box-shadow: inset 0 0 50px #e3f09b;
 	float:left;
-	width:30%;
+	width:280px;
 	vertical-align: top;
 }
 
@@ -72,7 +73,7 @@ p#imagelink {
 	border-radius: 20px;
 	box-shadow: inset 0 0 50px #87b6a7;
 	float:left;
-	width:26%;
+	width:250px;
 	vertical-align: top;
 
 }
@@ -85,6 +86,7 @@ button.button{
 	font-family: courier, monospace;
 	font-size: 16px;
 	font-weight: medium;
+	text-transform: capitalize;
 	text-align: left;
 	padding:10px ;
 	margin:10px;
@@ -110,3 +112,9 @@ footer {
 	text-align: center;
 	text-transform: capitalize;
 }
+
+@media screen and (max-width:320px) {
+	body {
+		width:320px;
+	}
+	
