--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p#imagelink {
 .column1of3{
 	font-family: comic sans MS, cursive;
 	font-size: 16px ;
-	font-weight:medium;
+	
 	height: 500px;
 	text-align: left;
 	padding: 10px;
@@ -48,7 +48,7 @@ p#imagelink {
 .column2of3{
 	font-family: arial,sans-serif ;
 	font-size: 16px ;
-	font-weight: medium;
+	
 	text-align: left;
 	height: 500px;
 	padding: 10px;
@@ -64,7 +64,7 @@ p#imagelink {
 .column3of3{
 	font-family: georgia, serif;
 	font-size: 16px;
-	font-weight: medium;
+	
 	text-align: center;
 	height: 500px;
 	padding:10px ;
@@ -85,7 +85,7 @@ button.button{
 .another-web{
 	font-family: courier, monospace;
 	font-size: 16px;
-	font-weight: medium;
+	font-weight: bold;
 	text-transform: capitalize;
 	text-align: left;
 	padding:10px ;
