--- a/css/creative.css
+++ b/css/creative.css
@@ -375,6 +375,10 @@ fieldset[disabled] .btn-primary.active {
   background-color: #F05F40;
   border-color: #F05F40;
 }
+
+i#contact-icon{
+  margin-right: 15px;
+}
 .btn-primary .badge {
   color: #F05F40;
   background-color: white;
